--- a/ChinmayaPurohit_prediction.ipynb
+++ b/ChinmayaPurohit_prediction.ipynb
@@ -7653,7 +7653,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Final.to_csv('C:/Users/SyberNautics-11/Desktop/High Radius_ML_Model/HRC81592W_MilindPruthi.csv')"
+    "Final.to_csv('C:/Users/chinm/Documents/HRModel/ChinmayaPurohit.csv')"
    ]
   },
   {
